src/test/deca/context/valid/assign-boolean.deca
// Description:
//    Assign un boolean
//
// Resultats:
//
//
// Historique:
//    cree le 06/01/2023

{
    boolean i;
    i = true;
}